--- a/internal/helpui/templates/help_ui.html
+++ b/internal/helpui/templates/help_ui.html
@@ -188,7 +188,7 @@
         <div class="hero">
           <div class="searchWrap">
             <div class="search" role="search">
-              <input id="q" autocomplete="off" spellcheck="false" placeholder="Search: apply, --namespace, KTL_SANDBOX_CONFIG…" />
+              <input id="q" autocomplete="off" spellcheck="false" placeholder="" />
             </div>
           </div>
         </div>
